Changed string names and populated the spinner with a string array.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="16dp" />
+        android:layout_margin="16dp"
+        tools:ignore="SpeakableTextPresentCheck"
+        android:entries="@array/beer_colors" />
 
     <Button
         android:id="@+id/find_beer"
@@ -20,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="16dp"
-        android:text="Find Beer" />
+        android:text="@string/find_beer" />
 
     <TextView
         android:id="@+id/brands"
@@ -28,6 +30,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="16dp"
-        android:text="@string/beer_types" />
+        android:text="@string/brands" />
 
 </LinearLayout>
